--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h1>Chatting World</h1>
 
     <!-- Group Profile Picture (CENTERED) -->
-    <img src="pfp.jpg" alt="Chatting World PFP" class="pfp" />
+    <img src="photo_2026-01-05_15-00-44.jpg" alt="Chatting World PFP" class="pfp" />
 
     <!-- Telegram Join Button -->
     <a href="https://t.me/+rnaHj0B2XmM2YTll" class="join-btn">Click to Join</a>
