--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- Group Profile Picture (CENTERED) -->
     <img src="photo_2026-01-05_15-00-44.jpg" alt="Chatting World PFP" class="pfp" />
-
+<p>Welcome! Please Join Us here </p>
     <!-- Telegram Join Button -->
     <a href="https://t.me/+rnaHj0B2XmM2YTll" class="join-btn">Click to Join</a>
   </div>
