--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <h1>Chatting World</h1>
 
     <div class="made-with-love">
-  Made with <span>❤️</span> by Kaushik
+  Made with <span>❤️</span> by Dhruve
 </div>
 
     <!-- Group Profile Picture (CENTERED) -->
