--- a/index.html
+++ b/index.html
@@ -1,163 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chatting World | Join Telegram</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Chatting World | Telegram</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
+<style>
+:root {
+  --cyan: #00f2ea;
+  --blue: #1da1f2;
+  --purple: #8e2de2;
+}
 
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #2c2c2c, #0f2027);
-      overflow: hidden;
-      color: #fff;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 
-    /* Animated background border */
-    body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border: 2px solid transparent;
-      background: linear-gradient(120deg, #00f2ea, #1da1f2, #8e2de2) border-box;
-      -webkit-mask:
-        linear-gradient(#000 0 0) padding-box,
-        linear-gradient(#000 0 0);
-      -webkit-mask-composite: xor;
-      mask-composite: exclude;
-      animation: borderMove 6s linear infinite;
-    }
-
-    @keyframes borderMove {
-      0% { filter: hue-rotate(0deg); }
-      100% { filter: hue-rotate(360deg); }
-    }
-
-    .card {
-      position: relative;
-      z-index: 1;
-      background: rgba(0, 0, 0, 0.65);
-      backdrop-filter: blur(12px);
-      padding: 50px 60px;
-      border-radius: 28px;
-      text-align: center;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.6);
-      animation: float 4s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
-    h1 {
-      font-size: 42px;
-      font-weight: 700;
-      margin-bottom: 35px;
-      background: linear-gradient(90deg, #00f2ea, #1da1f2);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      letter-spacing: 1.5px;
-    }
-
-    .pfp {
-      width: 170px;
-      height: 170px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 35px;
-      border: 4px solid rgba(255,255,255,0.9);
-      box-shadow:
-        0 0 30px rgba(29,161,242,0.7),
-        0 0 60px rgba(0,242,234,0.4);
-    }
-
-    .join-btn {
-      display: inline-block;
-      padding: 18px 55px;
-      font-size: 20px;
-      font-weight: 600;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 999px;
-      background: linear-gradient(135deg, #1da1f2, #00f2ea);
-      box-shadow: 0 15px 40px rgba(29,161,242,0.5);
-      transition: all 0.3s ease;
-    }
-
-    .join-btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 20px 60px rgba(0,242,234,0.8);
-    }
-
-    @media (max-width: 480px) {
-      .card {
-        padding: 40px 30px;
-      }
-
-      h1 {
-        font-size: 32px;
-      }
-
-      .pfp {
-        width: 140px;
-        height: 140px;
-      }
-    }
-    .made-with-love {
-  position: fixed;
-  top: 12px;
-  left: 12px;
-  background: rgba(0, 0, 0, 0.75);
+body {
+  height: 100vh;
+  background: radial-gradient(circle at top, #0f2027, #050505);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
-  padding: 6px 12px;
-  font-size: 12px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  overflow: hidden;
+}
+
+/* ===== Animated Particles ===== */
+body::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background:
+    radial-gradient(circle at 20% 30%, rgba(0,242,234,0.15), transparent 40%),
+    radial-gradient(circle at 80% 70%, rgba(29,161,242,0.18), transparent 40%),
+    radial-gradient(circle at 50% 90%, rgba(142,45,226,0.12), transparent 40%);
+  animation: bgMove 10s linear infinite alternate;
+}
+
+@keyframes bgMove {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-30px); }
+}
+
+/* ===== Card ===== */
+.card {
+  position: relative;
+  z-index: 2;
+  width: 380px;
+  padding: 55px 45px;
+  border-radius: 32px;
+  background: linear-gradient(
+    145deg,
+    rgba(255,255,255,0.08),
+    rgba(255,255,255,0.02)
+  );
+  backdrop-filter: blur(18px);
+  box-shadow:
+    0 40px 120px rgba(0,0,0,0.7),
+    inset 0 0 0 1px rgba(255,255,255,0.08);
+  text-align: center;
+  animation: fadeUp 1s ease forwards;
+  transform-style: preserve-3d;
+  transition: transform 0.4s ease;
+}
+
+.card:hover {
+  transform: rotateX(6deg) rotateY(-6deg) scale(1.02);
+}
+
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(40px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* ===== Title ===== */
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+  background: linear-gradient(90deg, var(--cyan), var(--blue));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 25px;
+}
+
+/* ===== Profile Picture ===== */
+.pfp-wrapper {
+  position: relative;
+  width: 170px;
+  height: 170px;
+  margin: 0 auto 30px;
+}
+
+.pfp-wrapper::before {
+  content: "";
+  position: absolute;
+  inset: -6px;
+  border-radius: 50%;
+  background: linear-gradient(120deg, var(--cyan), var(--purple));
+  filter: blur(12px);
+  animation: spin 6s linear infinite;
+}
+
+@keyframes spin {
+  100% { transform: rotate(360deg); }
+}
+
+.pfp {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid rgba(255,255,255,0.9);
+  z-index: 1;
+}
+
+/* ===== Text ===== */
+p {
+  font-size: 15px;
+  opacity: 0.85;
+  margin-bottom: 30px;
+}
+
+/* ===== Button ===== */
+.join-btn {
+  position: relative;
+  display: inline-block;
+  padding: 18px 55px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  text-decoration: none;
   border-radius: 999px;
-  z-index: 9999;
+  background: linear-gradient(135deg, var(--blue), var(--cyan));
+  box-shadow: 0 20px 60px rgba(29,161,242,0.6);
+  overflow: hidden;
+  transition: transform 0.25s ease;
+}
+
+.join-btn::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle, rgba(255,255,255,0.4), transparent 60%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.join-btn:hover {
+  transform: scale(1.08);
+}
+
+.join-btn:hover::after {
+  opacity: 1;
+}
+
+/* ===== Badge ===== */
+.made-with-love {
+  position: fixed;
+  top: 14px;
+  left: 14px;
+  background: rgba(0,0,0,0.7);
+  padding: 7px 14px;
+  font-size: 12px;
+  border-radius: 999px;
   backdrop-filter: blur(6px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  cursor: default;
-  transition: transform 0.25s ease, opacity 0.25s ease;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.4);
+  z-index: 10;
 }
 
-.made-with-love span {
-  margin: 0 2px;
+/* ===== Mobile ===== */
+@media (max-width: 480px) {
+  .card {
+    width: 90%;
+    padding: 45px 30px;
+  }
+  h1 {
+    font-size: 32px;
+  }
 }
-
-.made-with-love:hover {
-  transform: translateY(-2px) scale(1.03);
-  opacity: 0.95;
-}
-
-  </style>
+</style>
 </head>
-<body>
-  <div class="card">
-    <h1>Chatting World</h1>
 
-    <div class="made-with-love">
-  Made with <span>❤️</span> by Kaushik & Dhruv
+<body>
+
+<div class="made-with-love">Made with ❤️ by Kaushik & Dhruv</div>
+
+<div class="card">
+  <h1>Chatting World</h1>
+
+  <div class="pfp-wrapper">
+    <img src="photo_2026-01-05_15-00-44.jpg" class="pfp" alt="Chatting World" />
+  </div>
+
+  <p>Connect • Chat • Grow together</p>
+
+  <a href="https://t.me/+6kiBpvLzgZI0ZWJl" class="join-btn">Join Telegram</a>
 </div>
 
-    <!-- Group Profile Picture (CENTERED) -->
-    <img src="photo_2026-01-05_15-00-44.jpg" alt="Chatting World PFP" class="pfp" />
-<p>Welcome! Please Join Us here </p>
-    <!-- Telegram Join Button -->
-    <a href="https://t.me/+rnaHj0B2XmM2YTll" class="join-btn">Click to Join</a>
-  </div>
 </body>
 </html>
